# ki-belegassistent-mvp

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: accounting_ai.py  extractor.py  main.py  models.py
app/static/: styles.css
app/templates/: detail.html  index.html  rules.html
ki-belegassistent-mvp-railway-final-flat/: nixpacks.toml  railpack.json
ki-belegassistent-mvp-railway-ready/ki-belegassistent-mvp/: README.md  requirements.txt  start.sh
ki-belegassistent-mvp-railway-ready/ki-belegassistent-mvp/app/: database.py  extractor.py
ki-belegassistent-mvp-railway-ready/ki-belegassistent-mvp/app/static/: styles.css
ki-belegassistent-mvp-railway-ready/ki-belegassistent-mvp/app/templates/: base.html  index.html
ki-belegassistent-mvp/ki-belegassistent-mvp/: README.md
ki-belegassistent-mvp/ki-belegassistent-mvp/app/: database.py  main.py
ki-belegassistent-mvp/ki-belegassistent-mvp/app/templates/: detail.html
